--- a/src/modules/full-viewport/index.styl
+++ b/src/modules/full-viewport/index.styl
@@ -25,7 +25,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: blue;
+  background: #eee;
 
   .full-viewport-container.landscape & {
     bottom: 100vh;
