--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -7,10 +7,8 @@
 
     {% include header.html %}
 
-    <div class="page-content">
-      <div class="wrapper">
+    <div>
         {{ content }}
-      </div>
     </div>
 
     {% include footer.html %}
