fixing up some layout stuff

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,9 +1,5 @@
 <header>
-
-  <div class="wrapper">
-
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
-
+    <h1 class="hed-a"><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
     <nav class="site-nav">
       <ul>
           <li><a href="">Nav item</a></li>
@@ -12,7 +8,4 @@
           <li><a href="">Nav item</a></li>
       </ul>
     </nav>
-
-  </div>
-
 </header>
