--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -4,11 +4,9 @@
   {% include head.html %}
 
   <body>
-
-    {% include header.html %}
-
-    <div>
-        {{ content }}
+      <div class="wrapper">
+          {% include header.html %}
+          {{ content }}
     </div>
 
     {% include footer.html %}
