more clean up and adding in my css patterns that I use

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
     <h1 class="hed-a"><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
     <nav class="site-nav">
-      <ul>
+      <ul class="h-list h-list-md">
           <li><a href="">Nav item</a></li>
           <li><a href="">Nav item</a></li>
           <li><a href="">Nav item</a></li>
