--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="lede">
   <div class="art scanlines">
-    <img src="img/boxart-header.png">
+    <img src="/img/boxart-header.png">
   </div>
   <div class="title">
     <div class="title-copy">
@@ -9,5 +9,5 @@
       <p class="subhed">JavaScript<br>System</p>
     </div>
   </div>
-  <a class="seal" href="https://bocoup.com"><img src="img/bocoup-seal-sm.png" alt="Original Bocoup Seal of Quality"></a>
+  <a class="seal" href="https://bocoup.com"><img src="/img/bocoup-seal-sm.png" alt="Original Bocoup Seal of Quality"></a>
 </header>
