--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -4,11 +4,13 @@
   {% include head.html %}
 
   <body>
-    {% include header.html %}
+    <main>
+        {% include header.html %}
 
-    <div class="central">
-      {{ content }}
-    </div>
+        <div class="central">
+          {{ content }}
+        </div>
+    </main>
 
     {% include footer.html %}
 
