fixing the main heading for a post page

--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -8,7 +8,7 @@
         {% include header.html %}
 
         <div class="central post">
-            <h2 class="hed-a">{{post.title}}</h2>
+            <h2 class="hed-a">{{page.title}}</h2>
             {{ content }}
         </div>
     </main>
