adding in an include for the nav for @wilto to use to style

--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -6,6 +6,8 @@
   <body>
     <main>
         {% include header.html %}
+        
+        {% include nav.html %}
 
         <div class="central post">
             <h2 class="hed-a">{{page.title}}</h2>
