--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -7,6 +7,8 @@
     <main>
         {% include header.html %}
 
+        {% include nav.html %}
+
         <div class="central">
           {{ content }}
         </div>
