--- a/docs-src/_layouts/default.html
+++ b/docs-src/_layouts/default.html
@@ -8,7 +8,10 @@
         {% include header.html %}
 
         <div class="central">
-          {{ content }}
+            {% if page.title %}
+            <h2 class="hed-a">{{page.title}}</h2>
+            {% endif %}
+            {{ content }}
         </div>
     </main>
 
