--- a/src/modules/main/index.styl
+++ b/src/modules/main/index.styl
@@ -33,3 +33,20 @@
   transform: rotateZ(90deg);
   margin: 0 0.4em;
 }
+
+.win-screen {
+  z-index: 2;
+
+  font-family: Verdana, arial;
+  font-size: 11.5vh;
+}
+
+@media (max-aspect-ratio: 24/17) {
+  .win-screen {
+    font-size: 8.15vw;
+  }
+}
+
+.win-screen-button {
+  cursor: pointer;
+}
