Add copy to ui-helpers docs page (closes #70)

--- a/docs-src/css/docs.css
+++ b/docs-src/css/docs.css
@@ -467,6 +467,9 @@ iframe {
 iframe.short {
 	height: 25em;
 }
+iframe.very-short {
+  height: 5em;
+}
 
 /* Page Footer
 ----------------------- */
